less/plugins/plugin-blog.less
// -------------------------------------------
// BaseKit Standard Theme: LESS > Plugin: Blog
// -------------------------------------------


// -----------
// Search Form
// -----------


// Styles are set in 'less > theme.less' (4. #Forms)


// ----------
// Posts List
// ----------


.bk-blogpostlist {
    text-align: center;
}

// Read More Button

.read-more {
    display: inline-block;
    margin: 1em 0;
    padding: 9px 18px;
    color: @font-swatch7-color;
    background-color: @font-swatch7-background-color;
    .border-radius(3px);
    &:hover {
        text-decoration: none;
        background-color: @font-swatch7-background-color-hover;
        .transition( all, 0.5s, ease );
    }
}

// Return to Blog Link

.blog-home-link {
    display: inline-block;
    margin: 30px 0 40px;
}




// ------------------------
// Posts list & Single Post
// ------------------------


// Images

.post-image {
    display: inline-block;
    width: 100%;
    margin-top: 10px;
    margin-bottom: 40px;
    text-align: center;
    .image {
        margin: 0 auto;
        max-height: 450px;
        @media @tablet {
            max-height: 350px;
        }
    }
    @media @tablet {
        margin-bottom: 20px;
    }
}

.blogpostlist__image {
    margin: 0 auto;
}

.post-content,
.post-footer {
    width: auto;
    max-width: 600px;
    margin: 0 auto;
    text-align: left;
}

.post-footer {
    padding: 10px 0 40px;
    border-bottom: 1px solid darken(@color__secondary, 8%);
}




// -----------
// Single Post
// -----------


// Post Title

.blogpost__post-title {
    padding: 10px 0 30px;
}

// Date

time.timestamp.blogpost__timestamp {
    display: inline-block;
    margin: 2em 0 0;
    width: 100%;
}

// Categories and Tags

.post-attributes {
    display: inline-block;
    width: 100%;
    padding: 1em;
    margin: 2em 0;
    background-color: @color__secondary;
    border: 2px solid darken(@color__secondary, 10%);
    .category-title,
    .tags-title {
        display: inline-block;
    }
}

.tag-link:after {
    content: "\002C";
}

.tag-item:last-child .tag-link:after {
    content: "";
}

// Sharing buttons

.sharing-links {

    // Tablet and Desktop
    @media only screen and (min-width:550px) {
        display: -webkit-box;
        display: -moz-box;
        display: -ms-flexbox;
        display: -webkit-flex;
        display: flex;
        -webkit-box-direction: normal;
        -moz-box-direction: normal;
        -webkit-box-orient: horizontal;
        -moz-box-orient: horizontal;
        -webkit-flex-direction: row;
        -ms-flex-direction: row;
        flex-direction: row;
        -webkit-flex-wrap: nowrap;
        -ms-flex-wrap: nowrap;
        flex-wrap: nowrap;
        -webkit-box-pack: justify;
        -moz-box-pack: justify;
        -webkit-justify-content: space-between;
        -ms-flex-pack: justify;
        justify-content: space-between;
        -webkit-align-content: stretch;
        -ms-flex-line-pack: stretch;
        align-content: stretch;
        -webkit-box-align: center;
        -moz-box-align: center;
        -webkit-align-items: center;
        -ms-flex-align: center;
        align-items: center;
        .network-item {
            -webkit-box-flex: 0;
            -moz-box-flex: 0;
            -webkit-flex: 0 1 auto;
            -ms-flex: 0 1 auto;
            flex: 0 1 auto;
            -webkit-align-self: auto;
            -ms-flex-item-align: auto;
            align-self: auto;
        }
    }

    // Mobile
    .network-item,
    .button {
        width: 100%;
    }
    .button {
        padding: 9px 5px;
        margin-bottom: 20px;
        font-size: bkscale(@font-swatch7-font-size, 0.9);
        line-height: bkscale(@font-swatch7-line-height, 0.9);
    }

    // Buttons on hover
    .button:hover {
        &.icon--twitter {
            background-color: #4099FF;
        }
        &.icon--facebook {
            background-color: #3b5998;
        }
        &.icon--googleplus {
            background-color: #d34836;
        }
    }

}

